[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'node-primitives/std',
    'transaction-payment/std',
    'pallet-scheduler/std',
    'pallet-utility/std',
    'pallet-permissions/std',
    'pallet-products/std',
    'pallet-product-history/std',
    'pallet-profiles/std',
    'pallet-profile-follows/std',
    'pallet-profile-history/std',
    'pallet-reactions/std',
    'pallet-roles/std',
    'pallet-scores/std',
    'pallet-storefronts/std',
    'pallet-storefront-follows/std',
    'pallet-storefront-ownership/std',
    'pallet-storefront-history/std',
    'pallet-utils/std',
    'pallet-orders/std',
    'pallet-order-history/std',
    'pallet-ocw/std',
    'pallet-faucets/std',

]

[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '0.8.0-rc4'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment-rpc-runtime-api'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.node-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-utility]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-permissions]
default-features = false
path = '../pallets/permissions'
version = '0.4.0'

[dependencies.pallet-products]
default-features = false
path = '../pallets/products'
version = '0.4.0'

[dependencies.pallet-product-history]
default-features = false
path = '../pallets/product-history'
version = '0.4.0'

[dependencies.pallet-profiles]
default-features = false
path = '../pallets/profiles'
version = '0.4.0'

[dependencies.pallet-profile-follows]
default-features = false
path = '../pallets/profile-follows'
version = '0.4.0'

[dependencies.pallet-profile-history]
default-features = false
path = '../pallets/profile-history'
version = '0.4.0'

[dependencies.pallet-reactions]
default-features = false
path = '../pallets/reactions'
version = '0.4.0'

[dependencies.pallet-roles]
default-features = false
path = '../pallets/roles'
version = '0.4.0'

[dependencies.pallet-scores]
default-features = false
path = '../pallets/scores'
version = '0.4.0'

[dependencies.pallet-storefronts]
default-features = false
path = '../pallets/storefronts'
version = '0.4.0'

[dependencies.pallet-storefront-follows]
default-features = false
path = '../pallets/storefront-follows'
version = '0.4.0'

[dependencies.pallet-storefront-ownership]
default-features = false
path = '../pallets/storefront-ownership'
version = '0.4.0'

[dependencies.pallet-storefront-history]
default-features = false
path = '../pallets/storefront-history'
version = '0.4.0'

[dependencies.pallet-utils]
default-features = false
path = '../pallets/utils'
version = '0.4.0'

[dependencies.pallet-orders]
default-features = false
path = '../pallets/orders'
version = '0.4.0'

[dependencies.pallet-order-history]
default-features = false
path = '../pallets/order-history'
version = '0.4.0'

[dependencies.pallet-ocw]
default-features = false
path = '../pallets/ocw'
version = '0.4.0'

[dependencies.pallet-faucets]
default-features = false
path = '../pallets/faucets'

# [dependencies.session-keys]
# default-features = false
# package = 'pallet-session-keys'
# path = '../pallets/session-keys'
# version = '0.4.0'

[package]
name = 'dark-runtime'
version = '0.4.0'
authors = ['DarkDot <admin@darkdot.network>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://darkdot.network'
repository = 'https://github.com/DarkPayCoin/substrate-dark-node'
description = 'Darkdot runtime'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
tag = 'v2.0.0-rc4'
version = '1.0.5'
