#####################################################################
#                                                                   #
#   This project is a fork of great Subsocial project.              #
#   Please visit, share and love https://subsocial.network/         #
#   Orginal code : https://github.com/dappforce                     #
#                                                                   #
#####################################################################

[package]
name = "df-integration-tests"
version = "0.4.0"
authors = ["DarkDot <admin@darkdot.network>"]
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://darkdot.network"
repository = "https://github.com/DarkPayCoin/substrate-dark-node"
description = "Integration tests"
keywords = ["blockchain", "cryptocurrency", "social-network", "news-feed", "marketplace"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ['std']
std = [
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'sp-io/std',
    'sp-std/std',
    'pallet-timestamp/std',
    'pallet-permissions/std',
    'pallet-products/std',
    'pallet-product-history/std',
    'pallet-profiles/std',
    'pallet-profile-history/std',
    'pallet-profile-follows/std',
    'pallet-reactions/std',
    'pallet-roles/std',
    'pallet-scores/std',
    'pallet-storefronts/std',
    'pallet-storefront-follows/std',
    'pallet-storefront-history/std',
    'pallet-storefront-ownership/std',
    'pallet-utils/std'
]

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dev-dependencies.pallet-permissions]
default-features = false
path = "../permissions"

[dev-dependencies.pallet-products]
default-features = false
path = "../products"

[dev-dependencies.pallet-product-history]
default-features = false
path = "../product-history"

[dev-dependencies.pallet-profiles]
default-features = false
path = "../profiles"

[dev-dependencies.pallet-profile-history]
default-features = false
path = "../profile-history"

[dev-dependencies.pallet-profile-follows]
default-features = false
path = "../profile-follows"

[dev-dependencies.pallet-reactions]
default-features = false
path = "../reactions"

[dev-dependencies.pallet-roles]
default-features = false
path = "../roles"

[dev-dependencies.pallet-scores]
default-features = false
path = "../scores"

[dev-dependencies.pallet-storefronts]
default-features = false
path = "../storefronts"

[dev-dependencies.pallet-storefront-follows]
default-features = false
path = "../storefront-follows"

[dev-dependencies.pallet-storefront-history]
default-features = false
path = "../storefront-history"

[dev-dependencies.pallet-storefront-ownership]
default-features = false
path = "../storefront-ownership"

[dev-dependencies.pallet-utils]
default-features = false
path = "../utils"

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dev-dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'
