#####################################################################
#                                                                   #
#   This project is a fork of great Subsocial project.              #
#   Please visit, share and love https://subsocial.network/         #
#   Orginal code : https://github.com/dappforce                     #
#                                                                   #
#####################################################################

[package]
name = 'pallet-moderation'
version = '0.4.0'
authors = ['DarkDot <admin@darkdot.network>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://darkdot.network'
repository = 'https://github.com/DarkPayCoin/substrate-dark-node'
description = 'Darkdot content moderation pallet'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'sp-runtime/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'df-traits/std',
    'pallet-permissions/std',
    'pallet-products/std',
    'pallet-storefronts/std',
    'pallet-storefront-follows/std',
    'pallet-utils/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.df-traits]
default-features = false
path = '../traits'
version = '0.4.0'

[dependencies.pallet-permissions]
default-features = false
path = '../permissions'
version = '0.4.0'

[dependencies.pallet-products]
default-features = false
path = '../products'
version = '0.4.0'

[dependencies.pallet-storefronts]
default-features = false
path = '../storefronts'
version = '0.4.0'

[dependencies.pallet-storefront-follows]
default-features = false
path = '../storefront-follows'
version = '0.4.0'

[dependencies.pallet-utils]
default-features = false
path = '../utils'
version = '0.4.0'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dev-dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'
