#####################################################################
#                                                                   #
#   This project is a fork of great Subsocial project.              #
#   Please visit, share and love https://subsocial.network/         #
#   Orginal code : https://github.com/dappforce                     #
#                                                                   #
#####################################################################

[package]
name = 'pallet-scores'
version = '0.4.0'
authors = ['DarkDot <admin@darkdot.network>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://darkdot.network'
repository = 'https://github.com/DarkPayCoin/substrate-dark-node'
description = 'Pallet to update scores of storefronts, products, comments and accounts (profiles)'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[features]
default = ['std']
std = [
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'pallet-utils/std',
    'pallet-profiles/std',
    'pallet-profile-follows/std',
    'pallet-products/std',
    'pallet-storefronts/std',
    'pallet-storefront-follows/std',
    'pallet-reactions/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'

[dependencies.pallet-utils]
default-features = false
path = '../utils'
version = '0.4.0'

[dependencies.pallet-profiles]
default-features = false
path = '../profiles'
version = '0.4.0'

[dependencies.pallet-profile-follows]
default-features = false
path = '../profile-follows'
version = '0.4.0'

[dependencies.pallet-products]
default-features = false
path = '../products'
version = '0.4.0'

[dependencies.pallet-storefronts]
default-features = false
path = '../storefronts'
version = '0.4.0'

[dependencies.pallet-storefront-follows]
default-features = false
path = '../storefront-follows'
version = '0.4.0'

[dependencies.pallet-reactions]
default-features = false
path = '../reactions'
version = '0.4.0'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc4'
version = '2.0.0-rc4'
